--- a/Src/Web/appsettings.json
+++ b/Src/Web/appsettings.json
@@ -1,4 +1,8 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source =.; Initial Catalog=Shalvarmalvar_Store;User Id =sa; Password =123456; MultipleActiveResultSets = true;"
+  },
+
   "Logging": {
     "LogLevel": {
       "Default": "Information",
